HybridGuard/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hybridguard
  namespace: deepakkrishnamoorthi
  labels:
    app: hybridguard
spec:
  selector:
    app: hybridguard
  ports:
    - name: http
      port: 8080
      targetPort: 8080
